Add RAG Reference Support

--- a/src/CrestApps.OrchardCore.Documentations/docs/changelog/v2.0.0.md
+++ b/src/CrestApps.OrchardCore.Documentations/docs/changelog/v2.0.0.md
@@ -97,6 +97,42 @@ A new suite of modules for multi-channel communication:
 
 ---
 
+## Improvements
+
+### Unified Citation & Reference System
+
+The citation and reference system has been completely reworked so that **every AI provider** (Azure OpenAI, OpenAI, Ollama, Azure AI Inference) now returns the same citation references. Previously, citations only worked with Azure OpenAI's native data-sources feature (`GetMessageContext()`); since we now inject context ourselves via preemptive RAG and tool-based search, that approach no longer applied.
+
+**What changed:**
+
+- **`[doc:N]` citation markers** are now produced consistently by both Data Source and Document preemptive RAG handlers, as well as by the `DataSourceSearchTool` and `SearchDocumentsTool` AI tools.
+- **`referenceType`** is stored in the knowledge base index so the system knows whether a reference is a Content item, an uploaded Document, or a custom data source type.
+- **`AICompletionReference`** now includes `ReferenceId` and `ReferenceType` properties, enabling downstream consumers (hubs, UI) to generate appropriate links.
+- **`IAIReferenceLinkResolver`** — a new keyed-service interface for resolving reference links by type. Register custom resolvers with `services.AddKeyedScoped<IAIReferenceLinkResolver, MyResolver>("MyType")` to generate links for custom reference types.
+- **`CompositeAIReferenceLinkResolver`** dispatches to the correct keyed resolver based on `referenceType`. When no resolver is registered, the reference is shown without a link.
+- **`CitationReferenceCollector`** collects references from all sources (preemptive RAG context, tool-invoked searches) and resolves links in a single pass.
+- **Content item link resolution** — `DefaultAILinkGenerator` is registered as a keyed `IAIReferenceLinkResolver` for the `"Content"` reference type. Content item references automatically receive links generated via OrchardCore's `LinkGenerator` with the standard `OrchardCore.Contents` route. Document references (uploaded files) are shown by filename without a link.
+- **`DocumentChunkSearchResult`** now includes `DocumentKey` and `FileName` properties for uploaded document citation tracking.
+- **Azure OpenAI**: Removed the deprecated `GetMessageContext()` / `Citations` extraction logic and the `IAILinkGenerator` dependency from `AzureOpenAICompletionClient`. References are now handled uniformly via the orchestration pipeline.
+- **`AIInvocationScope` / `AIInvocationContext`** — new `AsyncLocal<T>`-based ambient context that replaces `HttpContext.Items` for all per-invocation AI data. This ensures full isolation between concurrent SignalR hub calls on the same WebSocket connection, preventing reference leaks, stale data source IDs, and other cross-invocation contamination issues. See the [AI Tools documentation](../ai/ai-tools.md#invocation-context-aiinvocationscope) for details.
+- **Shared reference counter** — `AIInvocationContext.NextReferenceIndex()` provides a monotonically increasing, thread-safe counter used by all preemptive RAG handlers and search tools, ensuring `[doc:N]` indices never collide even when data source and document references are produced in the same request.
+- **Incremental citation delivery** — Citation references are now collected and sent to the client progressively during streaming. Preemptive RAG references (from data sources and documents) are resolved before the streaming loop starts, so the first chunk already includes them. Tool-invoked references are merged incrementally during streaming as tools execute. This ensures the JavaScript client can render `[doc:N]` superscripts in real-time.
+- **`ChatSession` moved to `Items` dictionary** — `AIInvocationContext.ChatSession` property has been removed. The chat session is now stored in `AIInvocationContext.Items["AIChatSession"]` instead. Tools that need the chat session should read from `Items` (e.g., `invocationContext.Items.TryGetValue("AIChatSession", out var session)`).
+- **IsInScope evaluation moved to orchestrator** — The `IsInScope` constraint is no longer evaluated by individual preemptive RAG handlers (`DataSourcePreemptiveRagHandler`, `DocumentPreemptiveRagHandler`). Instead, the `PreemptiveRagOrchestrationHandler` evaluates it after all handlers have run. When no references are produced across all sources and `IsInScope` is enabled, a scoping directive is injected. When tools are available, the directive encourages the model to try tool-based search before concluding no answer exists, allowing `search_data_source` and `search_documents` to discover relevant content that the initial preemptive search missed.
+- **RAG text normalization** — Content and titles are now normalized before chunking and embedding using `RagTextNormalizer`. HTML tags, Markdown formatting, escaped HTML entities, and extraneous whitespace are stripped to produce clean plain text. This improves embedding quality, reduces token usage when injecting context into prompts, and prevents raw HTML from leaking into reference titles and chat UI. Normalization uses [`Microsoft.Extensions.DataIngestion.Markdig`](https://www.nuget.org/packages/Microsoft.Extensions.DataIngestion.Markdig) for structured Markdown-to-plain-text conversion, combined with HTML tag stripping and entity decoding. Titles in citation references are also normalized at creation time as a defense-in-depth measure for existing indexed data.
+- **Token-aware chunking** — The custom character-based text chunking has been replaced with `DocumentTokenChunker` from [`Microsoft.Extensions.DataIngestion`](https://www.nuget.org/packages/Microsoft.Extensions.DataIngestion). This uses actual LLM tokenizers (GPT-4o `o200k_base`) to split content at token boundaries with configurable overlap, producing chunks that align better with embedding model token limits.
+- **Inline citation markers** — The system prompt now instructs the AI model to include `[doc:N]` reference markers inline in its response text, immediately after the relevant statement. This enables users to see which statements are sourced from which references.
+
+**Breaking:** If you relied on `chunk.AdditionalProperties["ContentItemIds"]` or `chunk.AdditionalProperties["References"]` being set on streaming chunks by the Azure OpenAI provider, these are no longer set on individual chunks. References are now collected progressively during streaming from the orchestration context and tool execution context.
+
+**Breaking:** If you wrote custom AI tools that read `AIToolExecutionContext` from `HttpContext.Items[nameof(AIToolExecutionContext)]`, update them to use `AIInvocationScope.Current?.ToolExecutionContext` instead. Similarly, if you read `HttpContext.Items["DataSourceId"]` or `HttpContext.Items["ToolSearchReferences"]`, these are now on `AIInvocationScope.Current.DataSourceId` and `AIInvocationScope.Current.ToolReferences` respectively.
+
+**Breaking:** If you accessed `AIInvocationContext.ChatSession`, use `AIInvocationScope.Current?.Items["AIChatSession"]` instead.
+
+**Note:** Data sources and documents indexed before this release may contain raw HTML or Markdown in their content and titles. To benefit from normalization, re-index your data sources after upgrading.
+
+---
+
 ## Breaking Changes
 
 ### Changed: Navigation Paths
