use Microsoft.Extensions.DataIngestion for ingestions

--- a/src/CrestApps.OrchardCore.Documentations/docs/changelog/v2.0.0.md
+++ b/src/CrestApps.OrchardCore.Documentations/docs/changelog/v2.0.0.md
@@ -119,15 +119,20 @@ The citation and reference system has been completely reworked so that **every A
 - **Incremental citation delivery** — Citation references are now collected and sent to the client progressively during streaming. Preemptive RAG references (from data sources and documents) are resolved before the streaming loop starts, so the first chunk already includes them. Tool-invoked references are merged incrementally during streaming as tools execute. This ensures the JavaScript client can render `[doc:N]` superscripts in real-time.
 - **`ChatSession` moved to `Items` dictionary** — `AIInvocationContext.ChatSession` property has been removed. The chat session is now stored in `AIInvocationContext.Items["AIChatSession"]` instead. Tools that need the chat session should read from `Items` (e.g., `invocationContext.Items.TryGetValue("AIChatSession", out var session)`).
 - **IsInScope evaluation moved to orchestrator** — The `IsInScope` constraint is no longer evaluated by individual preemptive RAG handlers (`DataSourcePreemptiveRagHandler`, `DocumentPreemptiveRagHandler`). Instead, the `PreemptiveRagOrchestrationHandler` evaluates it after all handlers have run. When no references are produced across all sources and `IsInScope` is enabled, a scoping directive is injected. When tools are available, the directive encourages the model to try tool-based search before concluding no answer exists, allowing `search_data_source` and `search_documents` to discover relevant content that the initial preemptive search missed.
+- **Tool-search instructions when preemptive RAG is disabled** — When preemptive RAG is disabled but data sources or documents are attached, the orchestrator now injects system-message instructions guiding the model to call search tools (`search_data_source`, `search_documents`) to retrieve internal knowledge. When `IsInScope` is enabled, the model is forced to use only tool-retrieved content and must refuse to answer from general knowledge. When `IsInScope` is disabled, the model is instructed to try the search tools first and may supplement with general knowledge only if no relevant results are found.
 - **RAG text normalization** — Content and titles are now normalized before chunking and embedding using `RagTextNormalizer`. HTML tags, Markdown formatting, escaped HTML entities, and extraneous whitespace are stripped to produce clean plain text. This improves embedding quality, reduces token usage when injecting context into prompts, and prevents raw HTML from leaking into reference titles and chat UI. Normalization uses [`Microsoft.Extensions.DataIngestion.Markdig`](https://www.nuget.org/packages/Microsoft.Extensions.DataIngestion.Markdig) for structured Markdown-to-plain-text conversion, combined with HTML tag stripping and entity decoding. Titles in citation references are also normalized at creation time as a defense-in-depth measure for existing indexed data.
 - **Token-aware chunking** — The custom character-based text chunking has been replaced with `DocumentTokenChunker` from [`Microsoft.Extensions.DataIngestion`](https://www.nuget.org/packages/Microsoft.Extensions.DataIngestion). This uses actual LLM tokenizers (GPT-4o `o200k_base`) to split content at token boundaries with configurable overlap, producing chunks that align better with embedding model token limits.
+- **`IngestionDocumentReader`-based document parsing** — The custom `IDocumentTextExtractor` interface has been replaced with [`Microsoft.Extensions.DataIngestion.IngestionDocumentReader`](https://learn.microsoft.com/dotnet/api/microsoft.extensions.dataingestion.ingestiondocumentreader), the standard abstraction from `Microsoft.Extensions.DataIngestion`. Each document module now provides an `IngestionDocumentReader` implementation registered as a keyed singleton by file extension. The built-in `MarkdownReader` from `Microsoft.Extensions.DataIngestion.Markdig` is used for Markdown files. Custom PDF and OpenXml readers extend `IngestionDocumentReader` following the same patterns used in Microsoft's AI templates. Use `services.AddIngestionDocumentReader<T>(extensions)` to register custom readers — this replaces the previous `AddDocumentTextExtractor<T>()` method.
 - **Inline citation markers** — The system prompt now instructs the AI model to include `[doc:N]` reference markers inline in its response text, immediately after the relevant statement. This enables users to see which statements are sourced from which references.
+- **Context-gated system tools** — The `search_data_sources` and document processing tools (`search_documents`, `list_documents`, `read_document`, `read_tabular_data`) are now conditionally included in the tool registry based on context availability. `search_data_sources` is only available when a data source is attached to the AI profile or chat interaction. Document processing tools are only available when documents are attached to the session. This prevents the AI model from seeing tools it cannot use, eliminating hallucinated tool calls and reducing token overhead. The `SystemToolRegistryProvider` checks `AICompletionContext.DataSourceId` for data sources and `AICompletionContextKeys.HasDocuments` in `AdditionalProperties` for documents.
 
 **Breaking:** If you relied on `chunk.AdditionalProperties["ContentItemIds"]` or `chunk.AdditionalProperties["References"]` being set on streaming chunks by the Azure OpenAI provider, these are no longer set on individual chunks. References are now collected progressively during streaming from the orchestration context and tool execution context.
 
 **Breaking:** If you wrote custom AI tools that read `AIToolExecutionContext` from `HttpContext.Items[nameof(AIToolExecutionContext)]`, update them to use `AIInvocationScope.Current?.ToolExecutionContext` instead. Similarly, if you read `HttpContext.Items["DataSourceId"]` or `HttpContext.Items["ToolSearchReferences"]`, these are now on `AIInvocationScope.Current.DataSourceId` and `AIInvocationScope.Current.ToolReferences` respectively.
 
 **Breaking:** If you accessed `AIInvocationContext.ChatSession`, use `AIInvocationScope.Current?.Items["AIChatSession"]` instead.
+
+**Breaking:** The `IDocumentTextExtractor` interface has been removed. If you implemented a custom document text extractor, migrate it to an `IngestionDocumentReader` subclass and register it with `services.AddIngestionDocumentReader<T>(extensions)` instead of `AddDocumentTextExtractor<T>(extensions)`. The reader's `ReadAsync` method returns an `IngestionDocument` instead of a raw string — the document processing service extracts text from the `IngestionDocument` automatically.
 
 **Note:** Data sources and documents indexed before this release may contain raw HTML or Markdown in their content and titles. To benefit from normalization, re-index your data sources after upgrading.
 
