delete documents when the data source is removed

--- a/src/CrestApps.OrchardCore.Documentations/docs/changelog/v2.0.0.md
+++ b/src/CrestApps.OrchardCore.Documentations/docs/changelog/v2.0.0.md
@@ -125,6 +125,9 @@ The citation and reference system has been completely reworked so that **every A
 - **`IngestionDocumentReader`-based document parsing** — The custom `IDocumentTextExtractor` interface has been replaced with [`Microsoft.Extensions.DataIngestion.IngestionDocumentReader`](https://learn.microsoft.com/dotnet/api/microsoft.extensions.dataingestion.ingestiondocumentreader), the standard abstraction from `Microsoft.Extensions.DataIngestion`. Each document module now provides an `IngestionDocumentReader` implementation registered as a keyed singleton by file extension. The built-in `MarkdownReader` from `Microsoft.Extensions.DataIngestion.Markdig` is used for Markdown files. Custom PDF and OpenXml readers extend `IngestionDocumentReader` following the same patterns used in Microsoft's AI templates. Use `services.AddIngestionDocumentReader<T>(extensions)` to register custom readers — this replaces the previous `AddDocumentTextExtractor<T>()` method.
 - **Inline citation markers** — The system prompt now instructs the AI model to include `[doc:N]` reference markers inline in its response text, immediately after the relevant statement. This enables users to see which statements are sourced from which references.
 - **Context-gated system tools** — The `search_data_sources` and document processing tools (`search_documents`, `list_documents`, `read_document`, `read_tabular_data`) are now conditionally included in the tool registry based on context availability. `search_data_sources` is only available when a data source is attached to the AI profile or chat interaction. Document processing tools are only available when documents are attached to the session. This prevents the AI model from seeing tools it cannot use, eliminating hallucinated tool calls and reducing token overhead. The `SystemToolRegistryProvider` checks `AICompletionContext.DataSourceId` for data sources and `AICompletionContextKeys.HasDocuments` in `AdditionalProperties` for documents.
+- **Data source deletion cleanup** — When a data source is deleted, all associated document chunks are now properly removed from the master knowledge base index via `IDataSourceVectorSearchService.DeleteByDataSourceIdAsync`. Elasticsearch uses native `DeleteByQuery`; Azure AI Search uses filter-based pagination with batch deletion. The cleanup runs as a background job after the HTTP response completes to avoid blocking the admin UI. Previously, `DeleteDataSourceDocumentsAsync` resolved the document index manager but never invoked any deletion.
+- **Chat session document cleanup** — When an AI chat session is deleted (single or bulk), all uploaded session documents are now cleaned up: `AIDocument` records are deleted from the document store, and their vector index chunks are removed via a deferred task from all AI document index profiles. Previously, session deletion only removed the session record, leaving orphaned documents and index entries.
+- **Chat interaction document cleanup** — When a chat interaction is deleted, the `AIDocument` records associated with it are now deleted from the document store in addition to the vector index chunk cleanup that was already in place. Previously, only the index chunks were removed, leaving the document store records orphaned.
 
 **Breaking:** If you relied on `chunk.AdditionalProperties["ContentItemIds"]` or `chunk.AdditionalProperties["References"]` being set on streaming chunks by the Azure OpenAI provider, these are no longer set on individual chunks. References are now collected progressively during streaming from the orchestration context and tool execution context.
 
