--- a/src/CrestApps.OrchardCore.Documentations/docs/changelog/v2.0.0.md
+++ b/src/CrestApps.OrchardCore.Documentations/docs/changelog/v2.0.0.md
@@ -128,6 +128,9 @@ The citation and reference system has been completely reworked so that **every A
 - **Data source deletion cleanup** — When a data source is deleted, all associated document chunks are now properly removed from the master knowledge base index via `IDataSourceVectorSearchService.DeleteByDataSourceIdAsync`. Elasticsearch uses native `DeleteByQuery`; Azure AI Search uses filter-based pagination with batch deletion. The cleanup runs as a background job after the HTTP response completes to avoid blocking the admin UI. Previously, `DeleteDataSourceDocumentsAsync` resolved the document index manager but never invoked any deletion.
 - **Chat session document cleanup** — When an AI chat session is deleted (single or bulk), all uploaded session documents are now cleaned up: `AIDocument` records are deleted from the document store, and their vector index chunks are removed via a deferred task from all AI document index profiles. Previously, session deletion only removed the session record, leaving orphaned documents and index entries.
 - **Chat interaction document cleanup** — When a chat interaction is deleted, the `AIDocument` records associated with it are now deleted from the document store in addition to the vector index chunk cleanup that was already in place. Previously, only the index chunks were removed, leaving the document store records orphaned.
+- **Strengthened tool-search instructions** — When preemptive RAG is disabled and data sources or documents are attached, the system prompt now uses mandatory language (`MUST call... BEFORE generating any response`) to ensure the AI model calls search tools before answering. Previously, advisory language was used which some models ignored. When `IsInScope` is off, the model is instructed to search first and may fall back to general knowledge only if no results are found.
+- **Standardized prompt instruction format** — All AI system prompts now use a consistent `[Section Header]` + numbered rules format across the codebase. This includes `[Rules]` for utility prompts (chart generation, data extraction, search query extraction, post-session analysis, tabular processing), `[Output Format]` for expected output examples, and the existing `[Scope Constraint]`, `[Knowledge Source Instructions]`, and `[Response Guidelines]` for RAG-related prompts.
+- **Sequential reference display indices** — The JavaScript clients (`ai-chat.js`, `chat-interaction.js`) now remap cited reference indices to a sequential 1-based sequence when rendering. If the model cites `[doc:2]` and `[doc:5]` but not `[doc:1]`, the user sees superscripts **1** and **2** (not 2 and 5), with the reference list numbered accordingly. This prevents confusing gaps in visible numbering. The remapping uses a two-phase placeholder approach to avoid collisions during index substitution.
 
 **Breaking:** If you relied on `chunk.AdditionalProperties["ContentItemIds"]` or `chunk.AdditionalProperties["References"]` being set on streaming chunks by the Azure OpenAI provider, these are no longer set on individual chunks. References are now collected progressively during streaming from the orchestration context and tool execution context.
 
