Fix MCP resources and improbe the sample project

--- a/src/CrestApps.OrchardCore.Documentations/docs/changelog/v2.0.0.md
+++ b/src/CrestApps.OrchardCore.Documentations/docs/changelog/v2.0.0.md
@@ -90,6 +90,8 @@ A new suite of modules for multi-channel communication:
 - **MCP Prompts and Resources** — Prompts and resources can be added and managed via the admin UI.
 - **Templated Resources** — Support for dynamic MCP resources defined with URI templates.
 - **Stdio Transport** — Connect to local MCP servers (e.g., Docker containers) via Standard Input/Output.
+- **Template URI Whitespace Handling** — Resource URI templates and incoming URIs are now trimmed of leading/trailing whitespace before matching, preventing mismatches caused by accidental spaces in URI definitions.
+- **File Resource Directory Rejection** — The file resource handler now returns a descriptive error when the resolved path is a directory instead of a file, rather than attempting to read directory content.
 
 ### AI Agent (`CrestApps.OrchardCore.AI.Agent`)
 
