Optimize Widget Performance and Isolate SessionPrompts in a Dedicated Store

--- a/src/CrestApps.OrchardCore.Documentations/docs/changelog/v2.0.0.md
+++ b/src/CrestApps.OrchardCore.Documentations/docs/changelog/v2.0.0.md
@@ -146,6 +146,26 @@ The citation and reference system has been completely reworked so that **every A
 
 ---
 
+### Performance: AI Chat Session Prompt Storage Separation
+
+- **Prompts moved to a dedicated document store** — `AIChatSessionPrompt` objects are now stored as separate YesSql documents instead of being embedded in the `AIChatSession` document. This dramatically reduces the data loaded when listing sessions (admin pages, widgets, API), since only session metadata (title, sessionId, profileId, status) is fetched without loading potentially large prompt histories.
+- **Index-only session listings** — `DefaultAIChatSessionManager.PageAsync` now uses `QueryIndex<AIChatSessionIndex>` instead of `Query<AIChatSession, AIChatSessionIndex>`, returning lightweight `AIChatSessionEntry` DTOs. This is especially impactful for the admin widget which runs on every admin page request.
+- **New `IAIChatSessionPromptStore`** — A new store interface (`IAIChatSessionPromptStore`) provides `GetPromptsAsync`, `DeleteAllPromptsAsync`, and `CountAsync` operations for session prompts.
+- **Automatic data migration** — Existing sessions are automatically migrated: prompts are extracted from legacy `AIChatSession` documents into separate `AIChatSessionPrompt` documents via a batched deferred task (50 sessions per batch). No manual intervention is required.
+- **`ChatMessageCompletedContext.Prompts`** — The handler context now includes a `Prompts` property with the loaded prompts, so `IAIChatSessionHandler` implementations can access prompts without an additional store query.
+
+**Breaking:** `AIChatSession.Prompts` property has been removed. Code that previously accessed `session.Prompts` must now use `IAIChatSessionPromptStore.GetPromptsAsync(sessionId)` to load prompts.
+
+**Breaking:** `AIChatSessionPrompt` now extends `CatalogItem`. The `Id` property has been replaced by `ItemId` (inherited from `CatalogItem`), and a `SessionId` property has been added to associate prompts with their session.
+
+**Breaking:** `AIChatSessionResult.Sessions` now returns `IEnumerable<AIChatSessionEntry>` instead of `IEnumerable<AIChatSession>`. `AIChatSessionEntry` is a lightweight DTO containing only `SessionId`, `ProfileId`, `Title`, `UserId`, `ClientId`, `Status`, `CreatedUtc`, and `LastActivityUtc`.
+
+**Breaking:** `PostSessionProcessingService.ProcessAsync` and `DataExtractionService.ProcessAsync` now require an `IReadOnlyList<AIChatSessionPrompt>` parameter. Callers must load prompts from the store and pass them explicitly.
+
+**Breaking:** `AIChatSessionEventService.RecordSessionEndedAsync` now takes an `int promptCount` parameter instead of reading from `session.Prompts.Count`.
+
+---
+
 ## Breaking Changes
 
 ### Changed: Navigation Paths
