Reduce Allocations by using ZString

--- a/src/CrestApps.OrchardCore.Documentations/docs/changelog/v2.0.0.md
+++ b/src/CrestApps.OrchardCore.Documentations/docs/changelog/v2.0.0.md
@@ -146,6 +146,16 @@ The citation and reference system has been completely reworked so that **every A
 
 ---
 
+### Performance: Reduced String Allocations with ZString
+
+- **Adopted [ZString](https://github.com/Cysharp/ZString)** — Replaced `System.Text.StringBuilder` with ZString's `Utf16ValueStringBuilder` across AI system message generation, RAG context building, tool summaries, streaming response accumulation, CSV export, and batch processing. ZString uses `ArrayPool<char>` pooled buffers instead of allocating new internal arrays, significantly reducing GC pressure in hot paths.
+- **Key areas converted**: `DefaultMcpMetadataPromptGenerator`, `DefaultOrchestrator`, `CopilotOrchestrator`, `DocumentOrchestrationHandler`, `DocumentPreemptiveRagHandler`, `DataSourcePreemptiveRagOrchestrationHandler`, `SearchDocumentsTool`, `DataSourceSearchTool`, `TabularBatchProcessor`, `AIChatHub`, `ChatInteractionHub`, `ChatAnalyticsController`, `ApiAICompletionEndpoint`, `GenerateImageTool`, and others.
+- **Benchmark project added** — A new BenchmarkDotNet project at `tests/CrestApps.OrchardCore.Benchmarks` measures the allocation difference across five representative scenarios (system message generation, RAG context, streaming, CSV export, tool summaries). Run with `dotnet run -c Release --project tests/CrestApps.OrchardCore.Benchmarks`.
+
+**Note:** Code that passes `StringBuilder` parameters to `DefaultMcpMetadataPromptGenerator.AppendParameterSummary` must update to `ref Utf16ValueStringBuilder`. The `Utf16ValueStringBuilder` is a disposable struct — always use `using var sb = ZString.CreateStringBuilder();` to return pooled buffers.
+
+---
+
 ### Performance: AI Chat Session Prompt Storage Separation
 
 - **Prompts moved to a dedicated document store** — `AIChatSessionPrompt` objects are now stored as separate YesSql documents instead of being embedded in the `AIChatSession` document. This dramatically reduces the data loaded when listing sessions (admin pages, widgets, API), since only session metadata (title, sessionId, profileId, status) is fetched without loading potentially large prompt histories.
