--- a/src/CrestApps.OrchardCore.Documentations/docs/changelog/v2.0.0.md
+++ b/src/CrestApps.OrchardCore.Documentations/docs/changelog/v2.0.0.md
@@ -15,6 +15,21 @@ This is a major release that introduces new modules, an orchestrator-based archi
 
 ## New Modules
 
+### AI Prompt Templates
+
+- **Feature ID**: `CrestApps.OrchardCore.AI.Prompting`
+- Centralized AI system prompt management with file-based discovery, Liquid template rendering, and prompt composition.
+- Standalone `CrestApps.AI.Prompting` library can be used in any .NET project without Orchard Core.
+- All built-in system prompts (chart generation, search query extraction, title generation, task planning, RAG instructions, tabular batch processing, etc.) have been migrated to reusable `.md` template files in `AITemplates/Prompts/` directories.
+- **Extensible parser infrastructure** — Markdown front matter parsing ships by default; YAML, JSON, or other formats can be added by implementing `IAITemplateParser`.
+- **JSON compaction** — Fenced ` ```json ``` ` blocks in templates are automatically compacted during parsing to reduce token usage while keeping source files readable.
+- **Template caching** — Parsed templates are cached in memory and invalidated on tenant reload or application restart.
+- **AITemplateBuilder** — High-performance builder class for composing system prompts from multiple templates, raw strings, and template IDs with minimal allocations.
+- **Category-grouped UI** — AI Profile and Chat Interaction editors show prompt templates grouped by category with description display and JSON key-value parameter input.
+- RAG-related prompts (response guidelines, scope constraints, tool search instructions) extracted from orchestration handlers into reusable template files.
+- **`IAITemplateService.RenderAsync`** now throws `KeyNotFoundException` when the requested template ID is not found. Previously it returned `null`.
+- **`IAITemplateRenderer` renamed to `IAITemplateEngine`** — The interface handles both rendering and validation, so the name better reflects its responsibilities. `FluidAITemplateRenderer` is now `FluidAITemplateEngine`.
+
 ### AI Chat Interactions
 
 - **Feature ID**: `CrestApps.OrchardCore.AI.Chat.Interactions`
