--- a/src/CrestApps.OrchardCore.Documentations/docs/changelog/v2.0.0.md
+++ b/src/CrestApps.OrchardCore.Documentations/docs/changelog/v2.0.0.md
@@ -131,7 +131,7 @@ The citation and reference system has been completely reworked so that **every A
 - **Content item link resolution** — `DefaultAILinkGenerator` is registered as a keyed `IAIReferenceLinkResolver` for the `"Content"` reference type. Content item references automatically receive links generated via OrchardCore's `LinkGenerator` with the standard `OrchardCore.Contents` route. Document references (uploaded files) are shown by filename without a link.
 - **`DocumentChunkSearchResult`** now includes `DocumentKey` and `FileName` properties for uploaded document citation tracking.
 - **Azure OpenAI**: Removed the deprecated `GetMessageContext()` / `Citations` extraction logic and the `IAILinkGenerator` dependency from `AzureOpenAICompletionClient`. References are now handled uniformly via the orchestration pipeline.
-- **`AIInvocationScope` / `AIInvocationContext`** — new `AsyncLocal<T>`-based ambient context that replaces `HttpContext.Items` for all per-invocation AI data. This ensures full isolation between concurrent SignalR hub calls on the same WebSocket connection, preventing reference leaks, stale data source IDs, and other cross-invocation contamination issues. See the [AI Tools documentation](../ai/ai-tools.md#invocation-context-aiinvocationscope) for details.
+- **`AIInvocationScope` / `AIInvocationContext`** — new `AsyncLocal<T>`-based ambient context that replaces `HttpContext.Items` for all per-invocation AI data. This ensures full isolation between concurrent SignalR hub calls on the same WebSocket connection, preventing reference leaks, stale data source IDs, and other cross-invocation contamination issues. See the [AI Tools documentation](../ai/tools.md#invocation-context-aiinvocationscope) for details.
 - **Shared reference counter** — `AIInvocationContext.NextReferenceIndex()` provides a monotonically increasing, thread-safe counter used by all preemptive RAG handlers and search tools, ensuring `[doc:N]` indices never collide even when data source and document references are produced in the same request.
 - **Incremental citation delivery** — Citation references are now collected and sent to the client progressively during streaming. Preemptive RAG references (from data sources and documents) are resolved before the streaming loop starts, so the first chunk already includes them. Tool-invoked references are merged incrementally during streaming as tools execute. This ensures the JavaScript client can render `[doc:N]` superscripts in real-time.
 - **`ChatSession` moved to `Items` dictionary** — `AIInvocationContext.ChatSession` property has been removed. The chat session is now stored in `AIInvocationContext.Items["AIChatSession"]` instead. Tools that need the chat session should read from `Items` (e.g., `invocationContext.Items.TryGetValue("AIChatSession", out var session)`).
