add paramters support

--- a/src/CrestApps.OrchardCore.Documentations/docs/changelog/v2.0.0.md
+++ b/src/CrestApps.OrchardCore.Documentations/docs/changelog/v2.0.0.md
@@ -26,6 +26,9 @@ This is a major release that introduces new modules, an orchestrator-based archi
 - **Template caching** — Parsed templates are cached in memory and invalidated on tenant reload or application restart.
 - **AITemplateBuilder** — High-performance builder class for composing system prompts from multiple templates, raw strings, and template IDs with minimal allocations.
 - **Category-grouped UI** — AI Profile and Chat Interaction editors show prompt templates grouped by category with description display and JSON key-value parameter input.
+- **Parameter descriptors** — Templates can declare expected arguments using `Parameters:` front matter metadata. The UI displays parameter names and descriptions when a template is selected.
+- **Runtime template consumption** — When a prompt template is selected on an AI Profile or Chat Interaction, the template is rendered at runtime during orchestration. The rendered output replaces the custom system message.
+- **Liquid templates with typed objects** — Document availability and task planning templates now receive typed .NET objects (e.g., `AIToolDefinitionEntry`, `ToolRegistryEntry`, `ChatInteractionDocumentInfo`) and use Liquid loops to render tool and document lists.
 - RAG-related prompts (response guidelines, scope constraints, tool search instructions) extracted from orchestration handlers into reusable template files.
 - **`IAITemplateService.RenderAsync`** now throws `KeyNotFoundException` when the requested template ID is not found. Previously it returned `null`.
 - **`IAITemplateRenderer` renamed to `IAITemplateEngine`** — The interface handles both rendering and validation, so the name better reflects its responsibilities. `FluidAITemplateRenderer` is now `FluidAITemplateEngine`.
