Fix Chat documents ingestion

--- a/src/CrestApps.OrchardCore.Documentations/docs/changelog/v2.0.0.md
+++ b/src/CrestApps.OrchardCore.Documentations/docs/changelog/v2.0.0.md
@@ -194,6 +194,36 @@ The citation and reference system has been completely reworked so that **every A
 
 ---
 
+### Fix: Welcome Message Now Included in Chat History
+
+When an AI Profile has a `WelcomeMessage`, it is the first message the user sees. Previously, the model had no knowledge of this welcome message, so it could not understand the user's first response (e.g., answering a question posed in the welcome message). The welcome message is now prepended as the first assistant message in the conversation history, giving the model full context of the conversation from the start.
+
+---
+
+### Fix: Chat Session Handler Lifecycle Events
+
+`IAIChatSessionHandler` now extends `ICatalogEntryHandler<AIChatSession>`, adding full lifecycle events: `InitializingAsync`, `InitializedAsync`, `CreatingAsync`, `CreatedAsync`, `LoadedAsync`, `DeletingAsync`, `DeletedAsync`, `UpdatingAsync`, `UpdatedAsync`, `ValidatingAsync`, and `ValidatedAsync`. A new `AIChatSessionHandlerBase` base class (extending `CatalogEntryHandlerBase<AIChatSession>`) provides virtual no-op implementations for all lifecycle methods plus the existing `MessageCompletedAsync`, so handler implementations only need to override the events they care about.
+
+`DefaultAIChatSessionManager` no longer depends on `IAIDocumentStore` directly. Instead, it invokes `DeletingAsync`/`DeletedAsync` lifecycle events on all registered `IAIChatSessionHandler` implementations when sessions are deleted. Document cleanup is now handled by a dedicated `AIChatSessionDocumentCleanupHandler` registered in the AI Documents feature, resolving a dependency injection exception when the AI Documents feature was not enabled.
+
+**Breaking:** `IAIChatSessionHandler` now inherits from `ICatalogEntryHandler<AIChatSession>`. Existing implementations should extend `AIChatSessionHandlerBase` instead of implementing the interface directly to avoid having to implement all lifecycle methods.
+
+---
+
+### Fix: OpenXml Excel Data Extraction
+
+Fixed `OpenXmlIngestionDocumentReader.GetCellValue` to correctly handle Excel cells stored as **inline strings** (`InlineString` cell type) and **boolean** values. Previously, inline string cells returned empty text because the code only checked `CellValue`, which is `null` for inline strings — the text is stored in the `InlineString` element instead. Shared string table lookup was also changed from LINQ `ElementAtOrDefault` to direct `ChildElements` indexer for O(1) access.
+
+---
+
+### Refactor: Unified DataSourceMetadata Type
+
+`AIProfileDataSourceMetadata` and `ChatInteractionDataSourceMetadata` have been merged into a single `DataSourceMetadata` type in `CrestApps.OrchardCore.AI.Models`. Both types were identical (containing only a `DataSourceId` property) and served the same purpose on different entity types. Data migrations automatically rename the stored JSON property keys from the legacy names to `DataSourceMetadata`.
+
+**Breaking:** `AIProfileDataSourceMetadata` (from `CrestApps.OrchardCore.AI.Core.Models`) and `ChatInteractionDataSourceMetadata` (from `CrestApps.OrchardCore.AI.Chat.Interactions`) have been removed. Use `DataSourceMetadata` (from `CrestApps.OrchardCore.AI.Models`) instead.
+
+---
+
 ## Breaking Changes
 
 ### Changed: Navigation Paths
