Fix UI and readme file

--- a/src/CrestApps.OrchardCore.Documentations/docs/changelog/v2.0.0.md
+++ b/src/CrestApps.OrchardCore.Documentations/docs/changelog/v2.0.0.md
@@ -119,6 +119,21 @@ A new suite of modules for multi-channel communication:
 
 ## Improvements
 
+### MCP Client Authentication (`CrestApps.OrchardCore.AI.Mcp`)
+
+- **Structured Authentication Types** — The SSE connection UI now provides a dedicated authentication type selector instead of requiring raw HTTP header JSON. Supported types: **Anonymous**, **API Key**, **Basic Authentication**, **OAuth 2.0 Client Credentials**, **OAuth 2.0 + Private Key JWT**, **OAuth 2.0 + Mutual TLS (mTLS)**, and **Custom Headers** (legacy).
+- **API Key Authentication** — Configure an API key with a customizable header name and optional prefix (e.g., `Bearer`, `ApiKey`).
+- **Basic Authentication** — Provide username and password for HTTP Basic auth. Credentials are Base64-encoded automatically.
+- **OAuth 2.0 Client Credentials** — Acquire access tokens automatically using the `client_credentials` grant type. Tokens are cached in memory and refreshed before expiration.
+- **OAuth 2.0 + Private Key JWT** — Authenticate to OAuth 2.0 token endpoints using a signed JWT client assertion with an RSA private key. Supports optional Key ID (`kid`) for identity providers that require it.
+- **OAuth 2.0 + Mutual TLS (mTLS)** — Authenticate using a PFX/PKCS#12 client certificate for mutual TLS authentication with the token endpoint.
+- **Credential Protection** — All sensitive fields (API keys, passwords, client secrets, private keys, client certificates, certificate passwords) are encrypted at rest using ASP.NET Core Data Protection. Encrypted values are never exposed in deployment exports.
+- **Backward Compatibility** — Existing connections with raw `AdditionalHeaders` are automatically recognized as "Custom Headers" type when editing.
+
+**Breaking:** `IMcpClientTransportProvider.Get()` has been renamed to `GetAsync()` and now returns `Task<IClientTransport>` instead of `IClientTransport`. Custom transport provider implementations must update their method signature.
+
+---
+
 ### Unified Citation & Reference System
 
 The citation and reference system has been completely reworked so that **every AI provider** (Azure OpenAI, OpenAI, Ollama, Azure AI Inference) now returns the same citation references. Previously, citations only worked with Azure OpenAI's native data-sources feature (`GetMessageContext()`); since we now inject context ourselves via preemptive RAG and tool-based search, that approach no longer applied.
